fixed colouring issue, mkaing things hard to read

--- a/client/student-attendence-system/src/styles/student.css
+++ b/client/student-attendence-system/src/styles/student.css
@@ -26,6 +26,5 @@
 
 #classDetails{
     width: 100%;
-    color: whitesmoke;
 
 }
